# dcsysvinit

./: .gitignore  AUTHORS  INSTALL  Makefile  Makefile.am  README  autogen.sh  configure.ac
src/: Makefile.am  bootlogd.c  halt.c  hddown.c  ifdown.c  init.c  init.h  initpaths.h  initreq.h  initutmp.c  shutdown.c  utmp.c  writeutmp.c
